main.css
* {
    font-family: "Helvetica", sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

:root {
    --keyboardDivHeight: min(30vh, 200px);
    --keyboardRowHeight: calc(var(--keyboardDivHeight)/4);
    --keyboardRowPaddingTop: calc(var(--keyboardRowHeight)/4);
    --widgetSize: calc(8vh*20/75);
}

canvas {
    width: 100vw;
    height: calc(100vh-var(--keyboardDivHeight));
    position: absolute;
    right: 0; top: 0;
}

/* Keyboard stuff */
.keyboard {
    z-index: 2;
    position: absolute;
    left: 0px;
    bottom: 0px;
    width: 100vw;
    height: var(--keyboardDivHeight);
    background: #eeeeee;
    text-align: center;
    padding: 0px;
}

.keyrow {
    height: var(--keyboardRowHeight);
    width: 100vw;
    padding-top: var(--keyboardRowPaddingTop);
}

.key {
    /* transform: translateY(0%); */
    border: #000000;
    border-style: solid;
    border-width: 2px;
    border-radius: 8px;
    width: var(--keyboardRowHeight);
    height: var(--keyboardRowHeight);
    background: #ffffff;
    /* border-radius: 3px; */
    font-size: calc(8vh*20/45);
}

.key:hover {
    /* color: #2222ff;
    border-color: #2222ff; */
    cursor: pointer;
}

.kinv {
    background: #eeeeee;
    border: #eeeeee;
    color: #eeeeee;
}

.kinv:hover {
    border-style: none;
    cursor: default;
}

.klarge {
    width: calc(var(--keyboardRowHeight)*2);
}

.kwarn {
    background: #ffdddd;
}

/* Widget stuff */
.widgetcontainer {
    position: absolute;
    z-index: 3;
    left: 5px;
    bottom: 0px;
}

.widget {
    font-size: var(--widgetSize);
    margin: calc(var(--widgetSize)/2);
    z-index: 3;
    bottom: 0px;
}

#headsup {
    position: absolute;
    left: 50%;
    width: 100vh;
    text-align: center;
    margin-left: -50vh;
    top: 0px;
    font-size: 26px;
}

.ttext {
    margin-top: 5px;
    margin-bottom: 5px;
    margin-left: 30px;
}

.tsubtitle {
    margin-left: 15px;
    margin-top: 10px;
    margin-bottom: 10px;
}

.ttitle {
    margin-top: 20px;
    margin-bottom: 20px;
    margin-left: 0px;
    text-align: center;
    font-size: calc(8vh*20/45);
}

.tli {
    display: list-item;
    list-style-position: inside;
    list-style-type: disc;
}

.tlist {
    margin-top: 0px;
}

.xButton {
    position: absolute;
    right: 5px;
    top: 5px;
}

.xButton:hover {
    cursor: pointer;
}

.popup {
    display: none;
    z-index: 4;
    position: absolute;
    top: 50%; left: 50%;
    margin: -40vh 0 0 -20vw;
    height: 80vh;
    width: 40vw;
    background-color: #ffffff;
    border-radius: 10px;
    box-shadow: 0 4px 23px 0 rgba(0, 0, 0, 0.2);
}

.miniDifficultySetting {
    display: none;
    position: relative;
    margin-left: 5px;
    width: 48px;
    height: 34px;
    font-size: 16px;
    border-width: 2px;
    border-style: solid;
    background-color: #ffffff;
    border-color: #000000;
}

.miniDifficultySetting:hover {
    cursor: pointer;
    background-color: #ddeeff;
}

#settingsMenu {
    padding-left: 40px;
}

#tutorialoverlay {
    display: none;
    z-index: 3;
    position: absolute;
    top: 0; left: 0;
    height: 100vh;
    width: 100vw;
    background-color: #ffffff88;
}

/* Slider stuff */
.switch {
    position: relative;
    display: inline-block;
    width: 60px;
    height: 34px;
}

.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    -webkit-transition: .4s;
    transition: .4s;
}

.slider:before {
    position: absolute;
    content: "";
    height: 26px;
    width: 26px;
    left: 4px;
    bottom: 4px;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
}

input:checked + .slider {
    background-color: #0c6fc1;
}

input:not(:checked):disabled + .slider {
    background-color: #8b8b8b;
}

input:focus + .slider {
    box-shadow: 0 0 1px #0c6fc1;
}

input:checked + .slider:before {
    -webkit-transform: translateX(26px);
    -ms-transform: translateX(26px);
    transform: translateX(26px);
}

.slider.round {
    border-radius: 34px;
}

.slider.round:before {
    border-radius: 50%;
}

